src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Client Process</fullName>
        <description>for customer prospect / trial store leads</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Partner Request Process</fullName>
        <description>for web submission forms requesting to become a Channel Partner</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Acquisition_Campaign__c</fullName>
        <label>zAcquisition Campaign</label>
        <picklist>
            <picklistValues>
                <fullName>Interspire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProStores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas Fashion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YahooStores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-Cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MagentoGo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miva Merchant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1ShoppingCart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS Cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinnacle Cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zen Cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go Daddy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar - Visitors to Buyers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YahooStores2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon Webstore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3D Cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo Stores 3 Migratable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo Stores 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volusion 28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zoovy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AmeriCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoreCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSCommerceSpace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volusion 31</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_Lead_Owner__c</fullName>
        <formula>IF( Owner:User.IsActive = TRUE, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>zActive Lead Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Trials__c</fullName>
        <inlineHelpText>Number of non-expired trials</inlineHelpText>
        <label>zActive Trials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assign_Now__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag used to tell the code to re-assign the lead using coded assignment rules and round robin if the record qualifies.</description>
        <inlineHelpText>Flag used to tell the code to re-assign the lead using coded assignment rules and round robin if the record qualifies.</inlineHelpText>
        <label>zAssign Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BC_Value_Prop__c</fullName>
        <description>BC Value Prop for the Prospect</description>
        <inlineHelpText>BC Value Prop for the Prospect</inlineHelpText>
        <label>BC Value Prop</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bad_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this email isn&apos;t real</inlineHelpText>
        <label>Bad Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_MBA_Phone_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad MBA Phone 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_MBA_Phone_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad MBA Phone 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_MBA_Phone_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad MBA Phone 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_Phone_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if this phone number isn&apos;t real</inlineHelpText>
        <label>Bad Phone Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Big_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Big Brand?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Description__c</fullName>
        <label>Budget Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Date__c</fullName>
        <description>Shows the date the lead was moved to closed lost through a field update</description>
        <label>Unqualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <inlineHelpText>Why did this lead close rather than convert to a sale?</inlineHelpText>
        <label>Unqualified Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Unable to Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accidental Trial/No ecomm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Mature Enough/No Products/Too Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/Integration/3rd Party Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/Merchandising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/Wholesale/B2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/Promotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/Multi-Language Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/Multiple Store Backend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/Omni Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/Misc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timing - Reengage 1-3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timing - Reengage 4-12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timing - Reengage 12+ months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure &amp; Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influenced by 3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No longer in business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Cleanup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Contact Through Flow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is there a match on company? Used for deduping.</description>
        <inlineHelpText>Is there a match on company? Used for deduping.</inlineHelpText>
        <label>BA Company Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <inlineHelpText>What other platform is the prospect considering?</inlineHelpText>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Americommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magento CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magento EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netsuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demandware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I am not currently selling online.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Converted_Date__c</fullName>
        <formula>IF(ISBLANK( ConvertedDate  ) = FALSE, NOW(), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Converted_Within_16_Days__c</fullName>
        <formula>IF(AND( IsConverted = True, Days_to_Conversion__c  &lt;= 16) ,  True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zConverted Within 16 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_Within_7_Days__c</fullName>
        <formula>IF( AND( IsConverted = True, Days_to_Conversion__c &lt;=7) , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zConverted Within 7 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Platform__c</fullName>
        <description>What platform is the prospect on? Used during original sales cycle.</description>
        <inlineHelpText>What platform is the prospect on? Used during original sales cycle.</inlineHelpText>
        <label>Current Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magento CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magento EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netsuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Currently Selling Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1Shopping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3dcart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ayacart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bigcommerce (BC to BC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSCart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create A Shoppe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CubeCart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoDaddy - QSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interspire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lemonstand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mal&apos;s eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miva Merchant v4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpenCart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Option Cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSMax commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portable Shops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PureCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ShoppePro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Email_2__c</fullName>
        <inlineHelpText>describes the secondary email address of this lead.</inlineHelpText>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_LinkedIn__c</fullName>
        <formula>&apos;http://www.linkedin.com/search/fpsearch?type=people&amp;keywords=&apos; &amp;
SUBSTITUTE(SUBSTITUTE(FirstName, &quot; &quot;, &quot;+&quot;), &quot;&amp;&quot;, &quot;%26&quot;) &amp; &apos;+&apos;
&amp; SUBSTITUTE(SUBSTITUTE(LastName, &quot; &quot;, &quot;+&quot;), &quot;&amp;&quot;, &quot;%26&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the URL of a &quot;LinkedIn&quot; lookup screen. This can be added to a Groove View and can be rendered as an action button in your email client.</inlineHelpText>
        <label>LinkedIn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_Log_a_Call__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;00T/e?title=Call&amp;who_id=&apos; &amp; Id &amp; &apos;&amp;followup=1&amp;tsk5=Call&amp;retURL=%2F&apos; &amp; Id &amp; &apos;&amp;ent=Task&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the URL of a &quot;Log a Call&quot; screen. This can be added to a Groove View and can be rendered as an action button in your email client.</inlineHelpText>
        <label>Log a Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Address__c</fullName>
        <label>Datanyze Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Alexa_rank__c</fullName>
        <label>Datanyze Alexa rank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_City__c</fullName>
        <label>Datanyze City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Country__c</fullName>
        <label>Datanyze Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Domain_History__c</fullName>
        <label>Datanyze Domain History</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Datanyze_Domain_Tech__c</fullName>
        <label>Datanyze Domain Tech</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Datanyze_Employee_No__c</fullName>
        <label>Datanyze Employee No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Found_Match__c</fullName>
        <description>Did Datanyze find a match for this lead?</description>
        <formula>IF(NOT(ISBLANK(Datanyze_Alexa_rank__c)),TRUE,FALSE)</formula>
        <inlineHelpText>Did Datanyze find a match for this lead?</inlineHelpText>
        <label>Datanyze Found Match?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Datanyze_Founder_Year__c</fullName>
        <label>Datanyze Founder Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Funding__c</fullName>
        <label>Datanyze Funding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_GMV_Score__c</fullName>
        <description>Datanyze GMV Score</description>
        <inlineHelpText>Datanyze GMV Score</inlineHelpText>
        <label>Datanyze GMV Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Grade__c</fullName>
        <description>Datanyze Grade</description>
        <inlineHelpText>Datanyze Grade</inlineHelpText>
        <label>Datanyze Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Datanyze_Industry__c</fullName>
        <label>Datanyze Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Phone__c</fullName>
        <label>Datanyze Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Platform__c</fullName>
        <description>Datanyze Platform</description>
        <inlineHelpText>Datanyze Platform</inlineHelpText>
        <label>Datanyze Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Magento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prostores</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Datanyze_Public_or_not__c</fullName>
        <label>Datanyze Public or not</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Revenue__c</fullName>
        <label>Datanyze Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Score__c</fullName>
        <description>Datanyze Score</description>
        <inlineHelpText>Datanyze Score</inlineHelpText>
        <label>Datanyze Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Datanyze_State__c</fullName>
        <label>Datanyze State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datanyze_Zip__c</fullName>
        <label>Datanyze Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_of_Trial__c</fullName>
        <formula>IF(ISBLANK( Trial_Start_Date__c ) = FALSE, Today()- Trial_Start_Date__c , NULL)</formula>
        <inlineHelpText>Calculated off Start Date field</inlineHelpText>
        <label>zDay of Trial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Conversion__c</fullName>
        <description>for reporting only</description>
        <formula>IF(  IsConverted = TRUE , ConvertedDate -  DATEVALUE( CreatedDate),NULL)</formula>
        <label>Days to Conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Registration_Notes__c</fullName>
        <description>BAP-3181 - Used for the PRM Integration -- PRM writes to this field</description>
        <inlineHelpText>Used for the PRM Integration -- PRM writes to this field</inlineHelpText>
        <label>Deal Registration Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Maker_Notes__c</fullName>
        <description>Decision Maker Notes</description>
        <inlineHelpText>Decision Maker Notes</inlineHelpText>
        <label>Decision Maker Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Requested_Date__c</fullName>
        <description>Field used to determine if there was a ever a demo request submitted and if so, the date of the demo request.</description>
        <label>Demo Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Design_Account_ID__c</fullName>
        <formula>Design_Account__r.Id</formula>
        <label>zPAR Design Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Designates which partner BigCommerce has brought in to help with a client&apos;s design</inlineHelpText>
        <label>Design Account</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The account selected is not an approved designer.  Please enter an approved account or clear the value</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Designer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Design Leads</relationshipLabel>
        <relationshipName>DesignLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dialer_Eligible_Lead__c</fullName>
        <formula>IF(Phone != NULL 
  &amp;&amp; Owner:Queue.QueueName != NULL 
  &amp;&amp; ISPICKVAL(Status,&apos;Open&apos;)
  &amp;&amp; Owner:Queue.QueueName != &apos;Bad Contact Info Lead Queue&apos;
  &amp;&amp; DoNotCall = FALSE
  &amp;&amp; IsConverted = FALSE
  &amp;&amp; NOT (ISPICKVAL(Closed_Lost_Reason__c,&apos;No Longer in Business&apos;)
    || ISPICKVAL(Closed_Lost_Reason__c,&apos;Risk of Migration Issues&apos;)
    || ISPICKVAL(Closed_Lost_Reason__c,&apos;Migration Issues&apos;)
    || ISPICKVAL(Closed_Lost_Reason__c,&apos;zNo Longer In Business&apos;)
    || ISPICKVAL(Closed_Lost_Reason__c,&apos;Duplicate Record&apos;)
    || ISPICKVAL(Closed_Lost_Reason__c,&apos;Accidental Trial/No ecomm&apos;)
    || ISPICKVAL(Closed_Lost_Reason__c,&apos;Duplicate&apos;)) 
, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dialer Eligible Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the email domain match another email domain in our system (common email domains nonwithstanding).</description>
        <inlineHelpText>Does the email domain match another email domain in our system (common email domains nonwithstanding). Used for deduping.</inlineHelpText>
        <label>BA Email Domain Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <description>Is this a duplicate of another lead or contact? Used for deduping.</description>
        <inlineHelpText>Is this a duplicate of another lead or contact? Used for deduping.</inlineHelpText>
        <label>BA Duplicate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_match__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be used with Duplicate field.</description>
        <inlineHelpText>Used for deduping.</inlineHelpText>
        <label>BA Email match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Plan__c</fullName>
        <description>Expected Plan. Default to Bronze.</description>
        <inlineHelpText>Expected Plan. Default to Bronze.</inlineHelpText>
        <label>zExpected Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <description>Experience. Populated from MBA</description>
        <inlineHelpText>Experience. Populated from MBA</inlineHelpText>
        <label>MBA Experience</label>
        <picklist>
            <picklistValues>
                <fullName>New to eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experienced with eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switching from a Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Web Designer/Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m setting up a store for a client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functionality_Detail__c</fullName>
        <label>Unqualified Reason Detail</label>
        <picklist>
            <controllingField>Closed_Lost_Reason__c</controllingField>
            <picklistValues>
                <fullName>1,3,4 Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 GoDaddy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Magento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Shopify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Volusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Accidental trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 No Pitch-Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 No products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 No time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 100% Uptime Servers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Affiliate Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Ease of Use/Simplification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Difficulty with Product Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Importing review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Integration with Third Party tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Inventory/Billing Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Lack of Themes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Multi-Language Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Multiple Store Back-End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Provisioning Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Unsupported Cart-Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Minor/Child Sign Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Orion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Pre-Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 School Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Spam Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Test Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Sandbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-employment Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Google__c</fullName>
        <label>Google+</label>
        <length>120</length>
        <type>Text</type>
    </fields>
</CustomObject>